# finance-track

./: .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
core/: admin.py  forms.py  main_forms.py  main_urls.py  main_views.py  models.py  urls.py  utils.py  views.py
core/forms/: __init__.py  cartao_forms.py  categoria_forms.py  conta_forms.py  fatura_forms.py  transacao_cartao_forms.py
core/migrations/: 0001_initial.py  0002_remove_transacao_pago_transacao_data_pagamento.py  0003_contabancaria.py  0004_transacao_conta.py  0005_cartaocredito_fatura_despesacartao.py  0006_compraparcelada_transacaocartao_delete_despesacartao.py  0007_alter_transacao_conta.py  0008_categoria_icone.py
core/templates/core/: base.html  cartao_form.html  conta_form.html  dashboard.html  editar_transacao.html  invoice_detail.html  invoice_form.html  invoice_list.html  invoice_payment_form.html  lancar_transacao_cartao.html  listar_cartoes.html  listar_contas.html  listar_faturas.html  pagar_fatura.html  transaction_confirm_delete.html  transaction_form.html  transaction_list.html
core/templates/core/cartoes/: cartao_form.html  listar_cartoes.html
core/templates/core/categorias/: categoria_form.html  listar_categorias.html
core/templates/core/contas/: conta_form.html  (+1 more)
core/templatetags/: custom_tags.py
core/urls/: __init__.py  cartao_urls.py  categoria_urls.py  conta_urls.py
core/views/: __init__.py  cartao_views.py  categoria_views.py  conta_views.py  fatura_views.py  generic_crud.py  mixins.py  transacao_cartao_views.py
static/core/css/: styles.css
(+16 files in other folders)
